# petgraph-gen

./: Cargo.toml
src/: barabasi_albert.rs  erdos_renyi.rs  lib.rs
