[package]
name = "petgraph-gen"
version = "0.1.2"
authors = ["Tapani Honkanen"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["graph", "graph-algorithms", "generator"]
categories = ["algorithms"]
description = "Graph generators for petgraph"
repository = "https://github.com/tapanih/petgraph-gen"
readme = "README.md"
documentation = "https://docs.rs/petgraph-gen"

[lib]
name = "petgraph_gen"

[dependencies]
petgraph = "0.8.1"
rand = "0.9.0"
rustc-hash = "1.1.0"

[dev-dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
